<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_gravity="fill_vertical"
    android:scrollbars="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        >

        <!--game selection-->
        <RelativeLayout
            android:id="@+id/rl_as_choose_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="20dp"
            android:background="?android:selectableItemBackground"
            >

            <TextView
                android:id="@+id/tv_as_choose_game_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_add_choose_game_title"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                />

            <TextView
                android:id="@+id/tv_as_cg_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_as_choose_game_title"
                android:text="None"
                android:fontFamily="sans-serif"
                android:textSize="14sp"
                />

        </RelativeLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="4dp"
            android:background="@android:color/darker_gray"
            />

        <!--<fr.ganfra.materialspinner.MaterialSpinner-->
            <!--android:id="@+id/server_add_game"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:enabled="true"-->
            <!--android:spinnerMode="dropdown"-->
            <!--android:paddingLeft="0dp"-->
            <!--app:ms_hint="@string/server_add_game_hint"-->
            <!--app:ms_floatingLabelText="@string/server_add_game_title"-->
            <!--app:ms_alignLabels="false"-->
            <!--app:ms_baseColor="@color/spinner_base_color"-->
            <!--/>-->

        <!--server address -->
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/server_add_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/server_add_address_hint"
            android:singleLine="true"
            app:met_floatingLabel="normal"
            app:met_helperText="@string/server_add_address_helper"
            app:met_floatingLabelText="@string/server_add_address_title"
            />

        <!--server port-->
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/server_add_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="number"
            android:hint="@string/server_add_port_hint"
            app:met_floatingLabel="normal"
            app:met_helperText="@string/server_add_port_helper"
            app:met_floatingLabelText="@string/server_add_port_title"
            />

        <!--rcon-->
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/server_add_rcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="textPassword"
            android:hint="@string/server_add_rcon_hint"
            android:singleLine="true"
            app:met_floatingLabel="normal"
            app:met_floatingLabelText="@string/server_add_rcon_title"
            app:met_helperText=""
            />

        <!--query port-->
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/server_add_query_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="number"
            android:hint="@string/server_add_query_port_hint"
            app:met_floatingLabel="normal"
            app:met_floatingLabelText="@string/server_add_query_port_title"
            app:met_helperText="@string/server_add_query_port_helper"
            />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
